<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">app_spdcash</string>
    <string name="register_title">register_title</string>
    <string name="email">email</string>
    <string name="pseudo">pseudo</string>
    <string name="password">password</string>
    <string name="password2">password2</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="scan">Scan</string>
    <string name="messageformat">messageFormat</string>
    <string name="messagecontent">messageContent</string>
    <string name="action_settings">action_settings</string>
    <string name="connect">connect</string>
    <string name="connect_app">Connect App</string>
</resources>